--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,11 @@
 .App {
   text-align: center;
-  background: #070734;
+  background-image: url('/public/spacebg.jpg');
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
